# AdaptiveCards

./: .gitignore
.github/workflows/: azure-static-web-apps-agreeable-glacier-0f527d01e.yml
sampleApps/nodejs/src/: ac-sample.ts
source/shared/cpp/ObjectModel/: .gitignore  BaseElement.cpp  BaseElement.h  CMakeLists.txt  ElementParserRegistration.cpp  Enums.cpp  Enums.h  HostConfig.cpp  HostConfig.h  emscriptenHelpers.h  foo.html  pch.h
source/shared/cpp/ObjectModel/bindings/: ActionSetBindings.cpp  AdaptiveCardBindings.cpp  AuthCardButtonBindings.cpp  AuthenticationBindings.cpp  BackgroundImageBindings.cpp  BaseActionElementBindings.cpp  BaseCardElementBindings.cpp  BaseElementBindings.cpp  BaseInputElementBindings.cpp  ChoiceInputBindings.cpp  ChoiceSetInputBindings.cpp  CollectionTypeElementBindings.cpp  ColumnBindings.cpp  ColumnSetBindings.cpp  ContainerBindings.cpp  DateInputBindings.cpp  ElementParserRegistrationBindings.cpp  EnumBindings.cpp  ExecuteActionBindings.cpp  FactBindings.cpp  FactSetBindings.cpp  FeatureRegistrationBindings.cpp  HostConfigBindings.cpp  ImageBindings.cpp  ImageSetBindings.cpp  InlineBindings.cpp  JsonValueBindings.cpp  MarkdownParserBindings.cpp  MediaBindings.cpp  MediaSourceBindings.cpp  NumberInputBindings.cpp  OpenUrlActionBindings.cpp  ParseContextBindings.cpp  RefreshBindings.cpp  RichTextBlockBindings.cpp  RichTextBlockElementPropertiesBindings.cpp  SemanticVersionBindings.cpp  SeparatorBindings.cpp  ShowCardActionBindings.cpp  SubmitActionBindings.cpp  (+6 more)
source/shared/js/: lerna.json  package-lock.json  package.json
source/shared/js/pkgs/: tsconfig.json
source/uwp/: AdaptiveCards.sln
source/uwp/AdaptiveCardsObjectModel/: AdaptiveCards.ObjectModel.Uwp.h  AdaptiveCards.Rendering.Uwp.h  AdaptiveCardsObjectModel.vcxproj  AdaptiveCardsObjectModel.vcxproj.filters
source/uwp/AdaptiveCardsObjectModel/idl/: AdaptiveCards.ObjectModel.Uwp.idl  AdaptiveCards.Rendering.Uwp.idl
source/uwp/AdaptiveCardsObjectModel/lib/: AdaptiveActionElement.cpp  AdaptiveActionElement.h  AdaptiveActionParserRegistration.cpp  AdaptiveActionParserRegistration.h  AdaptiveActionSet.cpp  AdaptiveActionSet.h  AdaptiveActionSetParser.cpp  AdaptiveActionSetParser.h  AdaptiveActionSetRenderer.cpp  AdaptiveActionSetRenderer.h  AdaptiveAuthentication.cpp  AdaptiveBackgroundImage.cpp  AdaptiveCard.cpp  AdaptiveCard.h  AdaptiveCardElement.cpp  AdaptiveCardElement.h  AdaptiveCardParseResult.cpp  AdaptiveCardParseResult.h  AdaptiveChoiceInput.cpp  AdaptiveChoiceSetInput.cpp  AdaptiveChoiceSetInput.h  AdaptiveChoiceSetInputParser.cpp  AdaptiveChoiceSetInputParser.h  AdaptiveChoiceSetInputRenderer.cpp  AdaptiveChoiceSetInputRenderer.h  AdaptiveColumn.cpp  AdaptiveColumn.h  AdaptiveColumnParser.cpp  AdaptiveColumnParser.h  AdaptiveColumnRenderer.cpp  AdaptiveColumnRenderer.h  AdaptiveColumnSet.cpp  AdaptiveColumnSet.h  AdaptiveColumnSetParser.cpp  AdaptiveColumnSetParser.h  AdaptiveColumnSetRenderer.cpp  AdaptiveColumnSetRenderer.h  AdaptiveContainer.cpp  AdaptiveContainer.h  AdaptiveContainerParser.cpp  (+119 more)
source/uwp/Renderer/: AdaptiveCardRenderer.vcxproj  AdaptiveCardRenderer.vcxproj.filters
source/uwp/Renderer/idl/: AdaptiveCards.Rendering.Uwp.idl
source/uwp/Renderer/lib/: ActionHelpers.cpp  AdaptiveActionSetRenderer.cpp  AdaptiveActionSetRenderer.h  AdaptiveActionsConfig.h  AdaptiveCardConfig.h  AdaptiveCardGetResourceStreamArgs.h  AdaptiveCardParseResult.h  AdaptiveCardRendererComponent.cpp  AdaptiveCardRendererComponent.h  AdaptiveCardResourceResolvers.h  AdaptiveChoiceSetInputRenderer.cpp  AdaptiveChoiceSetInputRenderer.h  AdaptiveColumnRenderer.cpp  (+62 more)
source/uwp/UWPObjectModelTest/: ObjectModelTests.cs
source/uwp/UWPObjectModelUnitTests/: UWPObjectModelUnitTests.csproj
specs/DesignDiscussions/: Carousel.md  SharedModelJavascript.md  SharedModelJavascriptInvestigation.md
(+26 files in other folders)
